--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -39,6 +40,9 @@ dependencies:
   firebase_auth: ^4.17.6
   cloud_firestore: ^4.15.10
   google_sign_in: ^6.2.1 
+  timeline_tile: 2.0.0
+  url_launcher: ^6.0.12
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
