--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   timeline_tile: 2.0.0
   url_launcher: ^6.0.12
   shared_preferences: ^2.0.6
+  google_maps_flutter: ^2.0.6
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
