--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.0.6
   google_maps_flutter: ^2.0.6
   geolocator: ^10.1.0
+  flutter_svg: ^0.22.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ dev_dependencies:
 flutter:
   assets:
     - lib/images/
+    - lib/images/Mapa_final.svg
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
