--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+6
+version: 1.0.0+7
 
 environment:
   sdk: '>=3.3.2 <4.0.0'
@@ -36,16 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.25.5
-  firebase_auth: ^4.17.6
-  cloud_firestore: ^4.15.10
-  google_sign_in: ^6.2.1 
   timeline_tile: 2.0.0
   url_launcher: ^6.0.12
   shared_preferences: ^2.0.6
-  google_maps_flutter: ^2.0.6
-  geolocator: ^10.1.0
   flutter_svg: ^0.22.0
+  vector_math: ^2.1.0
   
 
 dev_dependencies:
