--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+7
+version: 1.0.0+8
 
 environment:
   sdk: '>=3.3.2 <4.0.0'
@@ -37,10 +37,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   timeline_tile: 2.0.0
-  url_launcher: ^6.0.12
+  url_launcher: ^6.1.5 
   shared_preferences: ^2.0.6
   flutter_svg: ^0.22.0
   vector_math: ^2.1.0
+  flutter_sticky_header: ^0.6.5
+ 
   
 
 dev_dependencies:
