App_fiepa_google_console_v5

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
 
     <application
+        android:enableOnBackInvokedCallback="true"
         android:label="appfiepa"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_new_icon">
