--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,16 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.0.4'  // Example classpath, adjust as needed
+        // NOTE: Ensure that your classpath versions are compatible with your Gradle version
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -8,9 +21,6 @@ allprojects {
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-
-subprojects {
     project.evaluationDependsOn(':app')
 }
 
